신규브라우저 추가

--- a/port.html
+++ b/port.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/css/pc.css">
   <link rel="stylesheet" href="./css/pc2.css">
+  <link rel="stylesheet" href="./css/anima.css">
   <link rel="stylesheet" href="./css/font.css">
   <link rel="stylesheet" href="./css/reset.min.css">
+
   <!-- font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,26 +30,26 @@
       <div class="section-1-title">
         Discover my
         <i class="text-box">portfolio</i>
-        <br />
+        <br>
         web design and
-        <br />
+        <br>
         explore web publishing.
       </div>
     </div>
-    <img class="cat-img" src="./img/cat-img0.png" />
+    <img class="cat-img" src="./img/cat-img0.png">
 
     <div class="bord-txt">
       <div class="_2024">2024</div>
       <div class="ver">.ver</div>
     </div>
-    <img class="side-icon-2" src="./img/side-icon-20.svg" />
+    <img class="side-icon-2" src="./img/side-icon-20.svg">
     <div class="side-icon-1" style="
         background: url(./img/side-icon-10.png) center;
         background-size: cover;
         background-repeat: no-repeat;">
-      <img class="gif" src="./img/rectangle0.png" />
+      <img class="gif" src="./img/rectangle0.png">
     </div>
-    <img class="logo-label-1" src="./img/logo-label-10.png" />
+    <img class="logo-label-1" src="./img/logo-label-10.png">
   </div>
 
 
@@ -56,7 +57,7 @@
     <div class="sec-2-grid sec-top">
       <div class="grid grid-1">
         <div class="test">
-          <img class="logo" src="./img/union0.svg" />
+          <img class="logo" src="./img/union0.svg">
           <div class="title">HTML5 / CSS3</div>
           <div class="grid_txt">
             <ul class="grid_txt_ul">
@@ -71,7 +72,7 @@
       </div>
       <div class="grid grid-2">
         <div class="test">
-          <img class="logo" src="./img/union1.svg" />
+          <img class="logo" src="./img/union1.svg">
           <div class="title">JavaScript &amp; jQuery</div>
           <div class="grid_txt">
             <ul class="grid_txt_ul">
@@ -86,7 +87,7 @@
       </div>
       <div class="grid grid-3">
         <div class="test">
-          <img class="logo" src="./img/union2.svg" />
+          <img class="logo" src="./img/union2.svg">
           <div class="title">Git, Github</div>
           <div class="grid_txt">
             <ul class="grid_txt_ul">
@@ -99,7 +100,7 @@
       </div>
       <div class="grid grid-4">
         <div class="test">
-          <img class="logo" src="./img/union3.svg" />
+          <img class="logo" src="./img/union3.svg">
           <div class="title">Tool</div>
           <div class="grid_txt">
             <ul class="grid_txt_ul">
@@ -117,7 +118,7 @@
       </div>
       <div class="grid grid-5">
         <div class="test">
-          <img class="logo" src="./img/ellipse-170.svg" />
+          <img class="logo" src="./img/ellipse-170.svg">
           <div class="title">React</div>
           <div class="grid_txt">
             css-modules, Styled-Component, Bootstrap
@@ -127,7 +128,7 @@
       </div>
       <div class="grid grid-6">
         <div class="test">
-          <img class="logo" src="./img/union4.svg" />
+          <img class="logo" src="./img/union4.svg">
           <div class="title">Other</div>
           <div class="grid_txt">
             <ul class="grid_txt_ul">
@@ -146,7 +147,7 @@
         <div class="test test2">
           <div class="flex">
             <div class="img">
-              <img class="_1-2" src="./img/_1-20.png" />
+              <img class="_1-2" src="./img/_1-20.png">
             </div>
             <div class="gird-7-txt">
               <div class="grid-7-title">
@@ -155,11 +156,13 @@
                 <p class="mbti">MBTI: INTP</p>
               </div>
               <div class="my-txt">
-                항상 배우며 성장하는 자세로 일하는,
-                <br />
-                꾸준한 노력가 김재환입니다.
+                <p>
+                  항상 배우며 성장하는 자세로 일하는,
+                  <br />
+                  꾸준한 노력가 김재환입니다.
+                </p>
               </div>
-              <div class="content div">
+              <div class="content_div">
                 <ul class="content ul">
                   <li>E-mail: azghmam@naver.com</li>
                   <li>Github: https://github.com/jk0014-h</li>
@@ -178,9 +181,8 @@
   <!-- section 3 -->
   <div class="section-3">
     <div class="sec-3-title">
-      <img class="icon-img" src="./img/charac.svg" />
+      <img class="icon-img" src="./img/charac.svg">
       <div class="title title1">
-
         <p class="web">web design/publishing.</p>
         <p class="portfolio">portfolio</p>
       </div>
@@ -190,80 +192,146 @@
       </div>
     </div>
 
-    <div class="grid">
+    <div class="box_grid">
+      <!-- 작은 박스 -->
       <div class="box box-sm box-one">
-        <div class="img-title">
+        <div class="img-title-small">
           <div class="title-txt">
-            <div class="title">copose</div>
-            <div class="category">(Temproject)</div>
+            <!-- 제목, 카테고리 -->
+            <div class="title_wrapper">
+              <div class="title">copose</div>
+              <div class="category">(Temproject)</div>
+            </div>
+            <!-- 부제목 -->
             <div class="sub-title">
               eocnd loream 4dmf wnaus ehlfrjrkx
             </div>
           </div>
         </div>
-        <div class="pofor-box-sm2">
-          <div class="bg-img"></div>
-          <img class="img-icon" src="./img/flow_icon.svg" />
+        <!-- 이미지 백그라운드,이미지 -->
+        <div class="pofor-box-sm1">
+          <div class="bg-img-sm"></div>
+          <div class="img-icon"><img src="./img/Arrow 12.png" alt="arrow" class="arrow12"></div>
+          <!-- <img class="img-icon" src="./img/flow_icon.svg"> -->
         </div>
       </div>
 
+      <!-- 큰박스 -->
       <div class="box box-bg box-two">
-        <div class="img-2-title">
-          <div class="title-txt2">
-            <div class="copose">copose</div>
-            <div class="temproject">(Temproject)</div>
-            <div class="eocnd-loream-4-dmf-wnaus-ehlfrjrkx">
+
+        <div class="img-title-big">
+          <div class="title-txt">
+            <!-- 제목, 카테고리 -->
+            <div class="title_wrapper">
+              <div class="title">copose</div>
+              <div class="category">(Temproject)</div>
+            </div>
+            <!-- 부제목 -->
+            <div class="sub-title">
               eocnd loream 4dmf wnaus ehlfrjrkx
             </div>
           </div>
         </div>
-        <div class="pofor-box-big">
-          <div class="rectangle-812"></div>
-          <img class="frame-343" src="./img/flow_icon.svg" />
-        </div>
+
+        <!-- 이미지 백그라운드,이미지 -->
+        <a href="./html/project-1/project-1.html">
+          <div class="pofor-box-big">
+            <div class="bg-img-big box-two"></div>
+            <div class="img-icon"><img src="./img/Arrow 12.png" alt="arrow" class="arrow12"></div>
+            <!-- <img class="img-icon" src="./img/flow_icon.svg"> -->
+          </div>
+        </a>
       </div>
 
+      <!-- 큰박스 -->
       <div class="box box-bg box-three">
-        <div class="img-3-title">
-          <div class="title-txt2">
-            <div class="copose">copose</div>
-            <div class="temproject">(Temproject)</div>
-            <div class="eocnd-loream-4-dmf-wnaus-ehlfrjrkx">
-              eocnd loream 4dmf wnaus ehlfrjrkx
+        <div class="img-title-big-three">
+          <div class="title-txt">
+            <!-- 제목, 카테고리 -->
+            <div class="title_wrapper">
+              <div class="title">copose</div>
+              <div class="category">(Temproject)</div>
+            </div>
+            <!-- 부제목 -->
+            <div class="sub-title">
+              eocnd loream 4dmf wnaus ehlfrjrkx 
             </div>
           </div>
         </div>
-        <div class="pofor-bg-big">
-          <div class="rectangle-812"></div>
-          <img class="frame-342" src="./img/flow_icon.svg" />
+        <!-- 이미지 백그라운드,이미지 -->
+        <div class="pofor-box-big">
+          <div class="bg-img-big box-three"></div>
+          <div class="img-icon"><img src="./img/Arrow 12.png" alt="arrow" class="arrow12"></div>
+          <!-- <img class="img-icon" src="./img/flow_icon.svg"> -->
         </div>
       </div>
 
       <div class="box box-sm box-four">
-        <div class="img-4-title">
+        <div class="img-title-four">
           <div class="title-txt">
-            <div class="copose">copose</div>
-            <div class="temproject">(Temproject)</div>
-            <div class="eocnd-loream-4-dmf-wnaus-ehlfrjrkx">
+            <!-- 제목, 카테고리 -->
+            <div class="title_wrapper">
+              <div class="title">copose</div>
+              <div class="category">(Temproject)</div>
+            </div>
+            <!-- 부제목 -->
+            <div class="sub-title">
               eocnd loream 4dmf wnaus ehlfrjrkx
             </div>
           </div>
         </div>
-        <div class="pofor-box-sm">
-          <div class="rectangle-81"></div>
-          <img class="frame-34" src="./img/flow_icon.svg" />
+        <!-- 이미지 백그라운드,이미지 -->
+        <div class="pofor-box-sm2">
+          <div class="bg-img-sm"></div>
+          <div class="img-icon"><img src="./img/Arrow 12.png" alt="arrow" class="arrow12"></div>
+          <!-- <img class="img-icon" src="./img/flow_icon.svg"> -->
         </div>
       </div>
     </div>
-
-
-
-
-
+    <!-- section 4 -->
   </div>
+  <div class="section-4">
+    <div class="bottom"></div>
+    <div class="last">
+      <p class="portfolio">portfolio</p>
+      <p class="kim-jae-hwan">(Kim-jae hwan)</p>
+    </div>
+
+    <div class="last-img">
+      <img class="sec4-bg1" src="./img/bg-txt1.svg">
+      <img class="sec4-icon" src="./img/sec4icon.svg">
+      <img class="sec4-bg2" src="./img/bg-txt2.svg">
+    </div>
 
 
-
+    <div class="catagory-list">
+      <div class="frame-29 frame">
+        <a href="#">
+          <p class="home">Home</p>
+        </a>
+      </div>
+      <div class="frame-30 frame">
+        <a href="#">
+          <p class="about-me">About me</p>
+        </a>
+      </div>
+      <div class="frame-31 frame">
+        <a href="#">
+          <p class="portfolio2">Portfolio</p>
+        </a>
+      </div>
+      <div class="frame-32 frame">
+        <a href="#">
+          <p class="github">Github</p>
+        </a>
+      </div>
+      <div class="frame-33 frame">
+        <a href="#">
+          <p class="email">Email</p>
+        </a>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
