--- a/html/project-1/project-1.html
+++ b/html/project-1/project-1.html
@@ -7,8 +7,8 @@
   <!-- <link rel="stylesheet" href="./css/prj1.css"> -->
   <link rel="stylesheet" href="./css/prj1-vw.css">
   <link rel="stylesheet" href="./css/prjanime.css">
-  <link rel="stylesheet" href="/port/css/font.css">
-  <link rel="stylesheet" href="/port/css/reset.min.css">
+  <link rel="stylesheet" href="../../css/font.css">
+  <link rel="stylesheet" href="../../css/reset.min.css">
   <title>Document</title>
 </head>
 
