--- a/html/project-1/project-1.html
+++ b/html/project-1/project-1.html
@@ -302,7 +302,7 @@
       <p class="portfolio">portfolio</p>
       <div class="catagory-list">
         <div class="frame-29 frame">
-          <a href="#"><p class="home">Home</p></a>
+          <a href="../../port.html"><p class="home">Home</p></a>
         </div>
         <div class="frame-30 frame">
           <a href="#"><p class="about-me">About me</p></a>
