--- a/port.html
+++ b/port.html
@@ -209,11 +209,13 @@
           </div>
         </div>
         <!-- 이미지 백그라운드,이미지 -->
-        <div class="pofor-box-sm1">
-          <div class="bg-img-sm"></div>
-          <div class="img-icon"><img src="./img/Arrow 12.png" alt="arrow" class="arrow12"></div>
-          <!-- <img class="img-icon" src="./img/flow_icon.svg"> -->
-        </div>
+        <a href="./html-pj/project-2/olive.html">
+          <div class="pofor-box-sm1">
+            <div class="bg-img-sm box-one"></div>
+            <div class="img-icon"><img src="./img/Arrow 12.png" alt="arrow" class="arrow12"></div>
+            <!-- <img class="img-icon" src="./img/flow_icon.svg"> -->
+          </div>
+        </a>
       </div>
 
       <!-- 큰박스 -->
@@ -254,7 +256,7 @@
             </div>
             <!-- 부제목 -->
             <div class="sub-title">
-              eocnd loream 4dmf wnaus ehlfrjrkx 
+              eocnd loream 4dmf wnaus ehlfrjrkx
             </div>
           </div>
         </div>
