--- a/port.html
+++ b/port.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/css/pc.css">
   <link rel="stylesheet" href="./css/pc2.css">
   <link rel="stylesheet" href="./css/anima.css">
   <link rel="stylesheet" href="./css/font.css">
@@ -209,10 +208,14 @@
             </div>
           </div>
         </div>
-        <div class="pofor-box-sm2">
-          <div class="bg-img"></div>
-          <img class="img-icon" src="./img/flow_icon.svg" />
-        </div>
+        <!-- 이미지 백그라운드,이미지 -->
+        <a href="./html-pj/project-2/olive.html">
+          <div class="pofor-box-sm1">
+            <div class="bg-img-sm box-one"></div>
+            <div class="img-icon"><img src="./img/Arrow 12.png" alt="arrow" class="arrow12"></div>
+            <!-- <img class="img-icon" src="./img/flow_icon.svg"> -->
+          </div>
+        </a>
       </div>
 
       <!-- 큰박스 -->
