--- a/port.html
+++ b/port.html
@@ -16,6 +16,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&display=swap"
     rel="stylesheet">
+    <script src="./js/jquery-3.7.1.js"></script>
 </head>
 
 <body>
@@ -42,12 +43,15 @@
       <div class="_2024">2024</div>
       <div class="ver">.ver</div>
     </div>
-    <img class="side-icon-2" src="./img/side-icon-20.svg">
+    <div class="star_icon">
+      <div class="star"></div>
+      <!-- <img class="side-icon-2" src="./img/side-icon-20.svg"> -->
+    </div>
     <div class="side-icon-1" style="
-        background: url(./img/side-icon-10.png) center;
+        /* background: url(./img/side-icon-10.png) center; */
         background-size: cover;
         background-repeat: no-repeat;">
-      <img class="gif" src="./img/rectangle0.png">
+      <img class="gif" src="./img/recta.gif">
     </div>
     <img class="logo-label-1" src="./img/logo-label-10.png">
   </div>
@@ -199,8 +203,9 @@
           <div class="title-txt">
             <!-- 제목, 카테고리 -->
             <div class="title_wrapper">
-              <div class="title">copose</div>
+              <div class="title">olive young</div>
               <div class="category">(Temproject)</div>
+              <span></span>
             </div>
             <!-- 부제목 -->
             <div class="sub-title">
@@ -333,7 +338,8 @@
         </a>
       </div>
     </div>
-  </div>
+  </div >
+  <script src="./css/port.js"></script>
 </body>
 
 </html>
