--- a/port.html
+++ b/port.html
@@ -197,9 +197,9 @@
     </div>
 
     <div class="box_grid">
-      <!-- 작은 박스 -->
+      <!-- 작은 박스 1 -->
       <div class="box box-sm box-one">
-        <div class="img-title-small">
+        <div class="img-title-small t-sm-one">
           <div class="title-txt">
             <!-- 제목, 카테고리 -->
             <div class="title_wrapper">
@@ -215,7 +215,7 @@
         </div>
         <!-- 이미지 백그라운드,이미지 -->
         <a href="./html-pj/project-2/olive.html">
-          <div class="pofor-box-sm1">
+          <div class="pofor-box-sm-href sm-one">
             <div class="bg-img-sm box-one"></div>
             <div class="img-icon"><img src="./img/Arrow 12.png" alt="arrow" class="arrow12"></div>
             <!-- <img class="img-icon" src="./img/flow_icon.svg"> -->
@@ -223,15 +223,15 @@
         </a>
       </div>
 
-      <!-- 큰박스 -->
+      <!-- 큰박스 1 -->
       <div class="box box-bg box-two">
-
-        <div class="img-title-big">
+        <div class="img-title-big t-two">
           <div class="title-txt">
             <!-- 제목, 카테고리 -->
             <div class="title_wrapper">
               <div class="title">copose</div>
               <div class="category">(Temproject)</div>
+              <span></span>
             </div>
             <!-- 부제목 -->
             <div class="sub-title">
@@ -239,64 +239,78 @@
             </div>
           </div>
         </div>
-
         <!-- 이미지 백그라운드,이미지 -->
         <a href="./html/project-1/project-1.html">
-          <div class="pofor-box-big">
+          <div class="pofor-box-big-href big-one">
             <div class="bg-img-big box-two"></div>
+            <div class="img-icon"><img src="./img/Arrow 12.png" alt="arrow" class="arrow12"></div>
+          </div>
+        </a>
+      </div>
+
+      <!-- 큰박스 2 -->
+      <div class="box box-bg box-three">
+        <div class="img-title-big t-three">
+          <div class="title-txt">
+            <!-- 제목, 카테고리 -->
+            <div class="title_wrapper">
+              <div class="title">nintendo test</div>
+              <div class="category">(solo)</div>
+              <span></span>
+            </div>
+            <!-- 부제목 -->
+            <div class="sub-title">
+              eocnd loream 4dmf wnaus ehlfrjrkx
+            </div>
+          </div>
+        </div>
+        <!-- 이미지 백그라운드,이미지 -->
+         <a href="./html-pj/project-3/project-3.html">
+          <div class="pofor-box-big-href big-two">
+            <div class="bg-img-big box-three"></div>
+            <div class="img-icon"><img src="./img/Arrow 12.png" alt="arrow" class="arrow12">
+            </div>
+          </div>
+         </a>
+        
+      </div>
+      <!-- 작은박스 2 -->
+      <div class="box box-sm box-four">
+        <div class="img-title-small t-sm-two">
+          <div class="title-txt">
+            <!-- 제목, 카테고리 -->
+            <div class="title_wrapper">
+              <div class="title">olive young</div>
+              <div class="category">(Temproject)</div>
+              <span></span>
+            </div>
+            <!-- 부제목 -->
+            <div class="sub-title">
+              eocnd loream 4dmf wnaus ehlfrjrkx
+            </div>
+          </div>
+        </div>
+        <!-- 이미지 백그라운드,이미지 -->
+        <a href="./html-pj/project-2/olive.html">
+          <div class="pofor-box-sm-href sm-two">
+            <div class="bg-img-sm box-one"></div>
             <div class="img-icon"><img src="./img/Arrow 12.png" alt="arrow" class="arrow12"></div>
             <!-- <img class="img-icon" src="./img/flow_icon.svg"> -->
           </div>
         </a>
       </div>
 
-      <!-- 큰박스 -->
-      <div class="box box-bg box-three">
-        <div class="img-title-big-three">
-          <div class="title-txt">
-            <!-- 제목, 카테고리 -->
-            <div class="title_wrapper">
-              <div class="title">copose</div>
-              <div class="category">(Temproject)</div>
-            </div>
-            <!-- 부제목 -->
-            <div class="sub-title">
-              eocnd loream 4dmf wnaus ehlfrjrkx
-            </div>
-          </div>
-        </div>
-        <!-- 이미지 백그라운드,이미지 -->
-        <div class="pofor-box-big">
-          <div class="bg-img-big box-three"></div>
-          <div class="img-icon"><img src="./img/Arrow 12.png" alt="arrow" class="arrow12"></div>
-          <!-- <img class="img-icon" src="./img/flow_icon.svg"> -->
-        </div>
-      </div>
 
-      <div class="box box-sm box-four">
-        <div class="img-title-four">
-          <div class="title-txt">
-            <!-- 제목, 카테고리 -->
-            <div class="title_wrapper">
-              <div class="title">copose</div>
-              <div class="category">(Temproject)</div>
-            </div>
-            <!-- 부제목 -->
-            <div class="sub-title">
-              eocnd loream 4dmf wnaus ehlfrjrkx
-            </div>
-          </div>
-        </div>
-        <!-- 이미지 백그라운드,이미지 -->
-        <div class="pofor-box-sm2">
-          <div class="bg-img-sm"></div>
-          <div class="img-icon"><img src="./img/Arrow 12.png" alt="arrow" class="arrow12"></div>
-          <!-- <img class="img-icon" src="./img/flow_icon.svg"> -->
-        </div>
-      </div>
+      
     </div>
-    <!-- section 4 -->
   </div>
+
+
+
+
+
+
+    <!-- section 4 -->
   <div class="section-4">
     <div class="bottom"></div>
     <div class="last">
