--- a/port.html
+++ b/port.html
@@ -183,7 +183,7 @@
 
 
   <!-- section 3 -->
-  <div class="section-3">
+  <div class="section-3" id="section-3">
     <div class="sec-3-title">
       <img class="icon-img" src="./img/charac.svg">
       <div class="title title1">
@@ -248,6 +248,10 @@
         </a>
       </div>
 
+      <!-- 완성할때까지 히든든 -->
+      <div class="hidddden">
+
+      
       <!-- 큰박스 2 -->
       <div class="box box-bg box-three">
         <div class="img-title-big t-three">
@@ -265,7 +269,8 @@
           </div>
         </div>
         <!-- 이미지 백그라운드,이미지 -->
-         <a href="./html-pj/project-3/project-3.html">
+         <!-- <a href="./html-pj/project-3/project-3.html"> -->
+          <a href="https://www.figma.com/proto/y9g721Jyp4NSwHRixqez9q/Untitled?page-id=0%3A1&node-id=1-8&viewport=-1479%2C614%2C0.92&t=goAfStwBMoPSHDCE-1&scaling=min-zoom&content-scaling=fixed" target="_blank">
           <div class="pofor-box-big-href big-two">
             <div class="bg-img-big box-three"></div>
             <div class="img-icon"><img src="./img/Arrow 12.png" alt="arrow" class="arrow12">
@@ -298,8 +303,9 @@
             <!-- <img class="img-icon" src="./img/flow_icon.svg"> -->
           </div>
         </a>
-      </div>
+      </div>      
 
+    </div>
 
       
     </div>
@@ -337,12 +343,12 @@
         </a>
       </div>
       <div class="frame-31 frame">
-        <a href="#">
+        <a href="#section-3">
           <p class="portfolio2">Portfolio</p>
         </a>
       </div>
       <div class="frame-32 frame">
-        <a href="#">
+        <a href="https://github.com/jk0014-h/portfolio-record">
           <p class="github">Github</p>
         </a>
       </div>
